2006-12-07  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added more sound effects. All taken from tuxpaints.

	* Makefile.mingw.in:
	* README.mingw:
	* boards/sounds/grow.wav:
	* boards/sounds/paint1.wav:
	* boards/sounds/prompt.wav:
	* src/boards/advanced_colors.c: (item_event):
	* src/boards/colors.c: (item_event):
	* src/boards/maze.c: (movePos), (key_press),
	(key_press_2D_relative), (key_press_3D), (twoDdisplay),
	(threeDdisplay), (update_tux):
	* src/boards/memory.c: (end_board), (create_item), (check_win),
	(item_event), (tux_play):
	* src/boards/python/mosaic.py:
	* src/boards/railroad.c: (item_event), (answer_event):
	* src/boards/read_colors.c: (item_event):
	* src/boards/shapegame.c: (shape_goes_back_to_list),
	(item_event_drag), (item_event_ok):

2006-12-06  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed 2 annoying bug in anim/draw:
	  It's now easy to move text by using it's anchor
	  The DEL key works now.

	* src/boards/python/anim.py:

2006-12-06  Yves Combe  <yves@ycombe.net>

	Change sounds to csound made sounds.

	* boards/sounds/melody/guitar/son1.ogg:
	* boards/sounds/melody/guitar/son2.ogg:
	* boards/sounds/melody/guitar/son3.ogg:
	* boards/sounds/melody/guitar/son4.ogg:
	* boards/sounds/melody/xylofon/son1.ogg:
	* boards/sounds/melody/xylofon/son2.ogg:
	* boards/sounds/melody/xylofon/son3.ogg:
	* boards/sounds/melody/xylofon/son4.ogg:

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- Improved by Joshua, on a suggestion of Jose.
	  Now the fish count is decreased when one fish escapes the children.

	* src/boards/clickgame.c: (fish_escape), (clickgame_move_item):

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- New images from Guillaume Rousse (released under GPL) are
	  replacing all undersea images for clickgame.

	* boards/clickgame.xml.in:
	* boards/clickgame/README:
	* boards/clickgame/sea1.jpg:
	* boards/clickgame/sea2.jpg:
	* boards/clickgame/sea3.jpg:
	* boards/clickgame/sea4.jpg:
	* boards/clickgame/sea5.jpg: