@@ -1,3 +1,14 @@
+2006-12-08  Yves Combe  <yves@ycombe.net>
+
+	By Miguel DE IZARRA:
+	- scale: works with two differents level. (normal and find total).
+	- shapegame: fix highlight bug.
+
+	* src/boards/scale.c: (start_board), (key_press),
+	(scale_anim_plateau), (scale_item_event), (scale_next_level),
+	(scale_destroy_all_items), (process_ok):
+	* src/boards/shapegame.c: (shape_goes_back_to_list):
+
 2006-12-07  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Added more sound effects. All taken from tuxpaints.
